--- a/src/bow.html
+++ b/src/bow.html
@@ -8,5 +8,5 @@
   <link rel="stylesheet" href="bundle.css">
 </head>
 <body>
-<script src="App-b225602a.js"></script><script src="index.js"></script></body>
+</body>
 </html>
