--- a/src/tome.html
+++ b/src/tome.html
@@ -8,5 +8,5 @@
   <link rel="stylesheet" href="bundle.css">
 </head>
 <body>
-<script src="tome-86c46985.js"></script><script src="bow.js"></script></body>
+</body>
 </html>
